2005-07-13  Andy Wingo  <wingo@pobox.com>

	* sys/xvimage/xvimagesink.c (gst_xvimage_buffer_destroy) 
	(gst_xvimagesink_xvimage_new): Ref the xvimagesink while the
	buffer points to it.
	(gst_xvimagesink_check_xshm_calls): Don't use our xvimage buffer,
	rather just doing X calls ourselves. Also fixes a memleak.

2005-07-12  Andy Wingo  <wingo@pobox.com>

	* sys/v4l/gstv4lsrc.c (gst_v4lsrc_get_property) 
	(gst_v4lsrc_set_property, gst_v4lsrc_class_init, gst_v4lsrc_init) 
	(gst_v4lsrc_create): Re-add the copy-mode property, default to
	TRUE to avoid deadlocks if an element holds on to our buffers.

2005-07-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/sine/gstsinesrc.c: (gst_sinesrc_class_init),
	(gst_sinesrc_init), (gst_sinesrc_create),
	(gst_sinesrc_set_property), (gst_sinesrc_get_property),
	(gst_sinesrc_start):
	* gst/sine/gstsinesrc.h:
	  removing num-buffers property before moving it

2005-07-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  use overridable ERROR_CFLAGS
	* docs/libs/gst-plugins-base-libs.types:
	* docs/libs/tmpl/gstringbuffer.sgml:
	* ext/alsa/gstalsasink.c: (gst_alsasink_get_type),
	(gst_alsasink_class_init):
	* ext/alsa/gstalsasrc.c: (gst_alsasrc_get_type),
	(gst_alsasrc_class_init):
	* gst-libs/gst/audio/audio.h:
	* gst-libs/gst/audio/gstaudioclock.h:
	* gst-libs/gst/audio/gstaudiofilter.c: (gst_audio_filter_get_type),
	(gst_audio_filter_base_init), (gst_audio_filter_class_init),
	(gst_audio_filter_link), (gst_audio_filter_init),
	(gst_audio_filter_chain), (gst_audio_filter_set_property),
	(gst_audio_filter_get_property),
	(gst_audio_filter_class_add_pad_templates):
	* gst-libs/gst/audio/gstaudiofilter.h:
	* gst-libs/gst/audio/gstaudiofiltertemplate.c:
	(gst_audio_filter_template_get_type),
	(gst_audio_filter_template_base_init),
	(gst_audio_filter_template_class_init),
	(gst_audio_filter_template_init),
	(gst_audio_filter_template_set_property),